# ZJBrainSciencePlatformDeploy

./: .gitignore  .gitmodules  README.md  alembic.sh  algorithm.Dockerfile  build.py  build.sh  compose.sh  config.sh  database.Dockerfile  deploy.sh  docker-compose.yaml  last_build_version  platform.Dockerfile  poetry.Dockerfile  pyproject.toml
backup_database/: backup_database.sh
backup_zfs/: backup_zfs.sh
deploys/: deploy.sh
deploys/builds/: build_NGINX.sh  build_STATIC.sh
deploys/config/: config.sh  config_DEV.sh  config_LOCAL.sh  config_MACAQUE.sh  config_PRODUCTION.sh
deploys/stack_yamls/: atlas-data.yaml  zjbrainscience-front.yaml
deploys/templates/: docker-compose-NGINX.yaml  docker-compose-STATIC.yaml
miniserve/: start-miniserve.sh
monitor/monitor_master/: docker-compose.yaml  prometheus.yaml
monitor/monitor_slave/: docker-compose.yaml
